Fix crash on startup when `--mappings-path` parameter is set